src/test/ui/type/type-shadow.stderr
error[E0308]: mismatched types
  --> $DIR/type-shadow.rs:6:20
   |
LL |         let y: Y = "hello";
   |                    ^^^^^^^ expected isize, found reference
   |
   = note: expected type `isize`
              found type `&'static str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
